# DataScience

./: .gitignore  API_data_to_csv.ipynb  EDA_1.ipynb  LinearReg.ipynb  Practical_3_LR.ipynb  README.md  pyproject.toml
EDA/: EDA_1.ipynb
Preproccessing/: API_data_to_csv.ipynb  columnTransformer.ipynb  normalization.ipynb  standardization.ipynb
WebScraping/: temp.html  wecpage.html  wecscraper.ipynb
data/: companies.csv
model_testing/: BatchGD.test.ipynb  MiniBatchGD.test.ipynb  MultiLR.test.ipynb  SimpleGD.test.ipynb  SimpleGD.test.py  SimpleLR.test.ipynb  StochasticGD.test.ipynb
models/: BatchGD.py  MiniBatchGD.py  MultiLR.py  SimpleBatchGD.py  SimpleGD.py  SimpleLR.py  StochasticGD.py  __init__.py
